[tool.poetry]
name = "oauthmanager"
version = "0.1.0"
description = "A module for managing API authentication using 1Password and more."
authors = ["Suhail <suhailece@gmail.com>"]
readme = { file = "README.md", format = "md" }
license = "MIT"
packages = [{include = "oauthmanager", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
cryptography = "^43.0.1"

# Exclude sensitive files like credential cache
exclude = ["credentials_cache.json"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
